# drmod

./: .gitignore  Makefile  README.md  fli.odin  game_config.odin  main.odin  pyproject.toml  settings.odin  text_codec.odin  util.odin
src/drmod/: __init__.py  __main__.py  cli.py  game_config.py  settings.py  text_codec.py
